feat: 메인 페이지 최근 잡 노출

--- a/src/main/resources/static/oops.html
+++ b/src/main/resources/static/oops.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Error</title>
 </head>
 <body>
-<h1>Greeting!</h1>
+<h1>Oops!</h1>
 </body>
 </html>
